Improve blind box query usability

--- a/web/static/index.html
+++ b/web/static/index.html
@@ -616,6 +616,28 @@
             </div>
             <p class="hint">需要小号登录态才能发送，默认 5 分钟一次；多行内容会轮播发送。</p>
           </div>
+
+          <div class="settings-block">
+            <h4>心动盲盒盈亏查询</h4>
+            <div class="field inline" style="flex-wrap: wrap; gap: 12px;">
+              <label class="inline">开启查询<input type="checkbox" id="blindBoxEnabledToggle" /></label>
+              <label class="inline">回复到弹幕<input type="checkbox" id="blindBoxSendToggle" checked /></label>
+            </div>
+            <div class="field">
+              <label>触发短句（逗号或换行分隔）<input id="blindBoxTriggersInput" placeholder="例如：查询心动盲盒盈亏, 查询盲盒" /></label>
+            </div>
+            <input type="hidden" id="blindBoxBaseGiftInput" />
+            <div class="field inline">
+              <label class="inline">开出礼物名（逗号分隔）<input id="blindBoxRewardsInput" placeholder="电影票,棉花糖,..." /></label>
+            </div>
+            <div class="field">
+              <label>盈亏回复模板
+                <textarea id="blindBoxTemplateInput" placeholder="{uname} 心动盲盒投入¥{base_cost_yuan}，产出¥{reward_value_yuan}，盈亏¥{profit_yuan}"></textarea>
+              </label>
+              <p class="hint">占位符：{uname} / {uid} / {base_cost} / {reward_value} / {profit} / {base_cost_yuan} / {reward_value_yuan} / {profit_yuan} / {profit_sign} / {base_gift}</p>
+            </div>
+            <p class="hint">收到触发短句后会查询该用户的盲盒记录，基础礼物固定为“心动盲盒”且不会入库，开出的礼物会入库并按每个 ¥15 计价后计算盈亏，同时在控制台打印日志。</p>
+          </div>
         </div>
 
         <div class="row" style="justify-content: flex-end;">
@@ -1172,6 +1194,13 @@ const applySettingsToForm = (settings) => {
   document.getElementById("announceMessageInput").value = announceText;
   updateAnnouncePreview(announceText);
   document.getElementById("announceSkipOfflineToggle").checked = !!settings.announce_skip_offline;
+
+  document.getElementById("blindBoxEnabledToggle").checked = !!settings.blind_box_enabled;
+  document.getElementById("blindBoxSendToggle").checked = !!settings.blind_box_send_danmaku;
+  document.getElementById("blindBoxTriggersInput").value = (settings.blind_box_triggers || []).join(", ");
+  document.getElementById("blindBoxBaseGiftInput").value = settings.blind_box_base_gift || "心动盲盒";
+  document.getElementById("blindBoxRewardsInput").value = (settings.blind_box_rewards || []).join(", ");
+  document.getElementById("blindBoxTemplateInput").value = settings.blind_box_template || "";
 };
 
 const collectSettingsFromForm = () => {
@@ -1181,6 +1210,13 @@ const collectSettingsFromForm = () => {
     (value || "")
       .replace(/，/g, ",")
       .split(",")
+      .map((s) => s.trim())
+      .filter(Boolean);
+
+  const parsePhrases = (value) =>
+    (value || "")
+      .replace(/，/g, ",")
+      .split(/[\n,]/)
       .map((s) => s.trim())
       .filter(Boolean);
 
@@ -1220,6 +1256,12 @@ const collectSettingsFromForm = () => {
     announce_skip_offline: document.getElementById("announceSkipOfflineToggle").checked,
     announce_mode: announceMode,
     announce_danmaku_threshold: Math.max(toInt(document.getElementById("announceThresholdInput").value, 5), 1),
+    blind_box_enabled: document.getElementById("blindBoxEnabledToggle").checked,
+    blind_box_triggers: parsePhrases(document.getElementById("blindBoxTriggersInput").value),
+    blind_box_base_gift: document.getElementById("blindBoxBaseGiftInput").value || "心动盲盒",
+    blind_box_rewards: parsePhrases(document.getElementById("blindBoxRewardsInput").value),
+    blind_box_template: normalizeMultiline(document.getElementById("blindBoxTemplateInput").value),
+    blind_box_send_danmaku: document.getElementById("blindBoxSendToggle").checked,
   };
 };
 
